--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
 
     <body>
-        <h1>Hello! There is llgl0207's Github Pages!</h1>
+        <h1>Hello! There is llgl0207's Github Pages</h1>
         <br>
         <p>Nice to meet you! But I'm sorry about that I have no time to write this page because busy studies. </p>
     </body>
